--- a/wp-content/uploads/sites/37/elementor/css/post-6305e38.css
+++ b/wp-content/uploads/sites/37/elementor/css/post-6305e38.css
@@ -273,6 +273,9 @@
   font-weight: 500;
   line-height: 1.1em;
 }
+.elem-img img{
+  height: 200px !important;
+}
 .elementor-630 .elementor-element.elementor-element-d63f28b img {
   border-radius: 12px 12px 12px 12px;
 }
@@ -1068,11 +1071,6 @@
 .elementor-630
   .elementor-element.elementor-element-edf0185.bdt-background-overlay-yes:before {
   background-color: transparent;
-  background-image: linear-gradient(
-    90deg,
-    #083f8700 50%,
-    var(--e-global-color-uicore_dark) 72%
-  );
   opacity: 1;
   transition: background 0.3s;
   z-index: 2;
@@ -1080,7 +1078,6 @@
 .elementor-630
   .elementor-element.elementor-element-edf0185
   > .elementor-widget-container {
-  margin: 0px -400px 0px 0px;
   padding: 0px 0px 60px 0px;
 }
 .elementor-630 .elementor-element.elementor-element-edf0185 {
@@ -1129,7 +1126,7 @@
   .elementor-element.elementor-element-edf0185
   .bdt-ep-review-card-carousel-job-title {
   color: #ffffff9c;
-  padding-bottom: 100px;
+  padding-bottom: 30px;
   font-size: 14px;
 }
 .elementor-630
