--- a/wp-content/uploads/sites/37/uicore-globald4cc.css
+++ b/wp-content/uploads/sites/37/uicore-globald4cc.css
@@ -3246,7 +3246,7 @@ body.uicore-sidebar-left main.uicore-section .uicore-container {
 }
 .elementor-kit-4 {
   --e-global-color-uicore_primary: #f37700;
-  --e-global-color-uicore_secondary: #0c1c30;
+  --e-global-color-uicore_secondary: #0f2f57;
   --e-global-color-uicore_secondary2: #0d65d9;
   --e-global-color-uicore_accent: #3fcef6;
   --e-global-color-uicore_headline: #020617;
